src/pages/contact/index.module.css
#section-3{
    display: flex;
    padding: 5% 8%;
}

#contact-info, #contact-form, #form-line-1 div{
    width: 50%
}

hr{
    padding-right: 32px;
}

#contact-info h2, #contact-form h2{
    font-weight: 700;
  font-style: normal;
  text-transform: uppercase;
  text-decoration: none;
  letter-spacing: 4px;
  line-height: 1.2em;
  font-size: 41px;
  color: #E4E4E4 !important;
  margin-bottom: 38px;
}

.contact{
    display: flex;
    flex-direction: row;
    padding: 2% 0;
}

.icon {
    padding: 0 3%;
    margin: 0;
}

.icon span{
    font-size: 38px;
    color: #a7a39c
}

.info h4{
  /* font-family: 'Cormorant Garamond',Helvetica,Arial,Lucida,sans-serif; */
  font-weight: normal;
  font-style: normal;
  text-transform: uppercase;
  letter-spacing: 4px;
  line-height: 1.2em;
  margin: 0;
  font-size: 24px;
}

#form-line-1{
    display: flex;
    flex-direction: row;
}

#right{
    margin-left: 1em;
}
#left{
    margin-right: 1em;
}

#social img{
    width: 45px;
    margin: 10px;
}

@media (max-width: 1000px) {
    #section-3{
        display: block;
    }

    #contact-info, #contact-form{
        width: 100%;
        text-align: center;
    }

    #contact-info{
        margin-bottom: 5em;
    }

    .contact{
        display: block;
    }
}

